minor alignment fix

--- a/CSS/programsStyle.css
+++ b/CSS/programsStyle.css
@@ -23,7 +23,7 @@
 }
 
 #adjustposition {
-  margin-top: 40px;
+  margin-top: 60px;
   margin-bottom: 20px;
 }
 
